[project]
name = "hidden_surface"
version = "1.0.0"
description = "Simulating and Viewing the Rough Bergomi Model"
authors = [{ name = "Rayan Joshi", email = "rayanjoshi@hotmail.co.uk" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    # -------- Data Handling & Visualisation -------- #
    "matplotlib",
    "numpy",
    "IPython",
    "pandas",
    "scipy",

    # -------- Financial Data -------- #
    "wrds",
    "pandas_datareader",

    # -------- Utilities -------- #
    "hydra-core",
    "omegaconf",
    "joblib",
    "python-dotenv",
    "colorlog",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3",
    "black>=24.4.2,<25.0",
    "ruff>=0.4.5,<0.5"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
