[project]
name = "hidden_surface"
version = "1.0.0"
description = "Numba-accelerated Rough Bergomi volatility model for derivatives pricing."
authors = [{ name = "Rayan Joshi", email = "rayanjoshi@hotmail.co.uk" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    # -------- Data Handling & Visualisation -------- #
    "matplotlib",
    "numpy<=2.4.0",
    "IPython",
    "pandas",
    "scipy",

    # -------- Financial Data -------- #
    "wrds==3.4.0",
    "pandas_datareader",

    # -------- Utilities -------- #
    "hydra-core",
    "omegaconf",
    "joblib",
    "python-dotenv",
    "colorlog",
    "numba",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3",
    "black>=24.4.2,<25.0",
    "ruff>=0.4.5,<0.5"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
